# groupdocs-rewriter-cloud-python

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  demo.ipynb  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: BaseTextRequest.md  CloudTextRequest.md  CompareApi.md  CompareTextRequest.md  CompareTextResponse.md  DegreeEnum.md  DetectApi.md  DetectionFileRequest.md  DetectionFileResponse.md  DetectionOcrRequest.md  DetectionSupportedFormats.md  DetectionTextRequest.md  DetectionTextResponse.md  DetectionTrialFileRequest.md  FileApi.md  FileSavingMode.md  FormalizeApi.md  FormalizeFileRequest.md  FormalizeFileResponse.md  FormalizeOcrRequest.md  FormalizeSupportedFromats.md  FormalizeTextRequest.md  FormalizeTextResponse.md  GenerateApi.md  GenerateRequest.md  GenerateResponse.md  HealthCheckInfo.md  HealthCheckResponse.md  HttpStatusCode.md  InfoApi.md  LanguageInfo.md  MediaInputFormat.md  Model.md  OcrInputFormat.md  OcrOutputFormat.md  Opt.md  ParaphraseApi.md  ParaphraseFileRequest.md  ParaphraseFileResponse.md  ParaphraseOcrRequest.md  (+30 more)
groupdocs_rewriter_cloud/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
groupdocsrewritercloud/: __init__.py  api_client.py  configuration.py  rest.py
test/: __init__.py  test_base_text_request.py  test_cloud_text_request.py  test_compare_api.py  test_compare_text_request.py  test_compare_text_response.py  test_degree_enum.py  test_detect_api.py  test_detection_file_request.py  test_detection_file_response.py  test_detection_ocr_request.py  test_file_api.py  test_opt.py  (+61 more)
(+65 files in other folders)
