[tool.poetry]
name = "groupdocs_rewriter_cloud"
version = "1.0.0"
description = "GroupDocs.Rewriter API"
authors = ["GroupDocs <anton.perhunov@aspose.com>"]
license = "Aspose EULA"
readme = "README.md"
repository = "https://github.com/groupdocs-rewriter-cloud/groupdocs-rewriter-cloud-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "GroupDocs.Rewriter API"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
